realease 2&3/parser.output
Terminais sem uso na gramática

   token_strings
   token_booleans
   token_ints
   token_switch
   token_switch_end
   token_case
   token_default
   token_if_end
   token_reals
   token_chars
   token_aspas
   token_pt
   token_hashtag
   token_chaves_abre
   token_chaves_fecha
   token_apost
   token_cbarra


Gramática

    0 $accept: PROG $end

    1 PROG: token_algoritmo token_ident INSERE_INIT token_pt_virg BLOCO
    2     | token_algoritmo token_ident INSERE_INIT token_pt_virg

    3 INSERE_INIT: %empty

    4 $@1: %empty

    5 BLOCO: DECL_VAR MAIS_FUNCOES $@1 BLOCO_MAIN
    6      | BLOCO_MAIN
    7      | DECL_VAR BLOCO_MAIN

    8 $@2: %empty

    9 BLOCO: MAIS_FUNCOES $@2 BLOCO_MAIN

   10 BLOCO_MAIN: token_inicio LISTA_CMD token_fim
   11           | token_inicio token_fim

   12 DECL_VAR: token_var LISTA_VAR token_var_fim
   13         | token_var token_var_fim

   14 MAIS_FUNCOES: MAIS_FUNCOES DECL_FUNC token_func_fim
   15             | DECL_FUNC token_func_fim
   16             | MAIS_FUNCOES DECL_FUNC token_proc_fim
   17             | DECL_FUNC token_proc_fim

   18 LISTA_VAR: LISTA_VAR REC_IDENT token_dois_pt TIPO COD1 token_pt_virg
   19          | REC_IDENT token_dois_pt TIPO COD1 token_pt_virg

   20 COD1: %empty

   21 REC_IDENT: REC_IDENT token_virg token_ident
   22          | token_ident

   23 BLOCO_FUNC: DECL_VAR BLOCO_MAIN
   24           | BLOCO_MAIN

   25 DECL_FUNC: token_func token_ident STRCPY_FUNC PARAMETROS token_dois_pt TIPO INSERE_FUNC_TAB token_pt_virg BLOCO_FUNC
   26          | token_proc token_ident STRCPY_FUNC PARAMETROS INSERE_PROC_TAB token_pt_virg BLOCO_FUNC
   27          | token_func token_ident STRCPY_FUNC PARAMETROS token_dois_pt TIPO INSERE_FUNC_TAB token_pt_virg
   28          | token_proc token_ident STRCPY_FUNC PARAMETROS INSERE_PROC_TAB token_pt_virg

   29 STRCPY_FUNC: %empty

   30 INSERE_FUNC_TAB: %empty

   31 INSERE_PROC_TAB: %empty

   32 PARAMETROS: token_abreParen LISTA_PARAM token_fechaParen
   33           | token_abreParen token_fechaParen

   34 LISTA_PARAM: LISTA_PARAM token_virg token_ident INSERE_VAR_LISTAPARAM token_dois_pt TIPO INSERE_LISTAPARAM_HASH
   35            | token_ident INSERE_VAR_LISTAPARAM token_dois_pt TIPO INSERE_LISTAPARAM_HASH

   36 INSERE_VAR_LISTAPARAM: %empty

   37 INSERE_LISTAPARAM_HASH: %empty

   38 LISTA_CMD: LISTA_CMD CMD
   39          | CMD

   40 CMD: CMD_WHILE
   41    | CMD_DO_WHILE
   42    | CMD_FOR
   43    | CMD_SIMPLES token_pt_virg
   44    | CMD_REPEAT
   45    | CMD_IF

   46 CMD_IF: token_if EXPRESSAO token_then LISTA_CMD token_then_end
   47       | token_if EXPRESSAO token_then LISTA_CMD token_then_end token_else LISTA_CMD token_else_end

   48 CMD_DO_WHILE: token_do LISTA_CMD token_do_end token_while EXPRESSAO

   49 CMD_REPEAT: token_repeat LISTA_CMD token_ate EXPRESSAO

   50 CMD_WHILE: token_while EXPRESSAO token_do LISTA_CMD token_while_end
   51          | token_while EXPRESSAO token_do token_while_end

   52 CMD_FOR: token_for TK_IDENT token_de IDENT_OU_INT token_ate IDENT_OU_INT token_do LISTA_CMD token_for_end
   53        | token_for TK_IDENT token_de IDENT_OU_INT token_ate IDENT_OU_INT token_passo IDENT_OU_INT token_do LISTA_CMD token_for_end
   54        | token_for TK_IDENT token_de IDENT_OU_INT token_ate IDENT_OU_INT token_do token_for_end
   55        | token_for TK_IDENT token_de IDENT_OU_INT token_ate IDENT_OU_INT token_passo IDENT_OU_INT token_do token_for_end

   56 IDENT_OU_INT: TK_IDENT
   57             | token_vlr_inteiro
   58             | token_menos token_vlr_inteiro

   59 CMD_SIMPLES: ATRIB
   60            | CHAMADA_FUNCAO
   61            | CMD_IMPRIMA
   62            | CMD_LEIA
   63            | CMD_MINIMO
   64            | CMD_MAXIMO
   65            | CMD_CENTRAL
   66            | RETURN
   67            | OP_INCR

   68 $@3: %empty

   69 ATRIB: IDENTS $@3 token_atrib VALOR

   70 IDENTS: IDENTS token_virg TK_IDENT
   71       | TK_IDENT

   72 $@4: %empty

   73 CMD_IMPRIMA: token_print token_abreParen ARG $@4 token_fechaParen

   74 $@5: %empty

   75 ARG: ARG token_virg $@5 VALOR VERIFICA_VAR_DECLARADA

   76 $@6: %empty

   77 ARG: $@6 VALOR VERIFICA_VAR_DECLARADA

   78 VERIFICA_VAR_DECLARADA: %empty

   79 CMD_LEIA: token_read token_abreParen token_fechaParen
   80         | token_read token_abreParen token_ident token_fechaParen

   81 CMD_CENTRAL: token_central token_abreParen IDENT_OU_NUM token_virg IDENT_OU_NUM token_virg IDENT_OU_NUM token_fechaParen

   82 IDENT_OU_NUM: IDENT_OU_INT
   83             | token_vlr_real
   84             | token_menos token_vlr_real

   85 CMD_MINIMO: token_minimo token_abreParen IDENT_OU_NUM token_virg IDENT_OU_NUM token_fechaParen

   86 CMD_MAXIMO: token_maximo token_abreParen IDENT_OU_NUM token_virg IDENT_OU_NUM token_fechaParen

   87 RETURN: token_return EXPRESSAO

   88 STRCPY_IDENT: token_ident

   89 $@7: %empty

   90 CHAMADA_FUNCAO: STRCPY_IDENT token_abreParen ARG $@7 token_fechaParen
   91               | STRCPY_IDENT token_abreParen token_fechaParen

   92 TIPO: TIPO_PRIM
   93     | MATRIZ

   94 MATRIZ: token_matriz T_MAT token_de TIPO_PRIM

   95 $@8: %empty

   96 T_MAT: token_colchete_abre token_vlr_inteiro SALVAR_M token_colchete_fecha token_colchete_abre token_vlr_inteiro $@8 token_colchete_fecha
   97      | token_colchete_abre token_vlr_inteiro SALVAR_M token_colchete_fecha

   98 SALVAR_M: %empty

   99 TIPO_PRIM: token_int
  100          | token_char
  101          | token_string
  102          | token_real
  103          | token_boolean

  104 VALOR: EXPRESSAO
  105      | TK_VLR_LITERAL

  106 EXPRESSAO: RESETA_PILHAS EXPRESSAO_ARIT OP_COMPARATIVO EXPRESSAO_ARIT
  107          | RESETA_PILHAS EXPRESSAO_ARIT

  108 RESETA_PILHAS: %empty

  109 EXPRESSAO_ARIT: EXPRESSAO_ARIT token_pot EXPR
  110               | EXPR

  111 $@9: %empty

  112 EXPR: EXPR token_mult $@9 VERIFICACAO_OP FATOR

  113 $@10: %empty

  114 EXPR: EXPR token_div $@10 VERIFICACAO_OP FATOR

  115 $@11: %empty

  116 EXPR: EXPR token_mod $@11 VERIFICACAO_OP FATOR

  117 $@12: %empty

  118 EXPR: EXPR token_and $@12 VERIFICACAO_OP FATOR
  119     | FATOR

  120 VERIFICACAO_OP: %empty

  121 $@13: %empty

  122 FATOR: FATOR token_mais $@13 VERIFICACAO_OP TERMO

  123 $@14: %empty

  124 FATOR: FATOR token_menos $@14 VERIFICACAO_OP TERMO

  125 $@15: %empty

  126 FATOR: FATOR token_or $@15 VERIFICACAO_OP TERMO
  127      | TERMO VERIFICACAO_TERMOS

  128 TERMO: OP_INCR
  129      | TK_VLR_NUM
  130      | token_abreParen EXPRESSAO token_fechaParen
  131      | CHAMADA_FUNCAO
  132      | TK_IDENT
  133      | TK_VLR_BOOL
  134      | MULTIPLOS_NOT token_abreParen EXPRESSAO token_fechaParen

  135 VERIFICACAO_TERMOS: %empty

  136 TK_IDENT: token_ident PILHA_IDENT
  137         | token_ident PILHA_IDENT TAM_MATRIZ VERIFICA_LIM_MAT

  138 VERIFICA_LIM_MAT: %empty

  139 PILHA_IDENT: %empty

  140 $@16: %empty

  141 TAM_MATRIZ: token_colchete_abre token_vlr_inteiro SALVAR_M token_colchete_fecha token_colchete_abre token_vlr_inteiro $@16 token_colchete_fecha
  142           | token_colchete_abre token_vlr_inteiro SALVAR_M token_colchete_fecha

  143 TK_VLR_LITERAL: token_vlr_char
  144               | token_vlr_string

  145 TK_VLR_NUM: token_vlr_inteiro
  146           | token_menos token_vlr_inteiro
  147           | token_vlr_real
  148           | token_menos token_vlr_real

  149 MULTIPLOS_NOT: MULTIPLOS_NOT token_not
  150              | token_not

  151 TK_VLR_BOOL: MULTIPLOS_NOT token_true
  152            | MULTIPLOS_NOT token_false
  153            | token_true
  154            | token_false
  155            | MULTIPLOS_NOT TK_IDENT

  156 $@17: %empty

  157 OP_INCR: TK_IDENT $@17 token_increment

  158 $@18: %empty

  159 OP_INCR: TK_IDENT $@18 token_decrement

  160 OP_COMPARATIVO: token_maior
  161               | token_maior_igual
  162               | token_menor
  163               | token_menor_igual
  164               | token_igual
  165               | token_diferente


Terminais, com as regras onde eles aparecem

$end (0) 0
error (256)
token_var_fim (258) 12 13
token_var (259) 12 13
token_char (260) 100
token_algoritmo (261) 1 2
token_if (262) 46 47
token_do (263) 48 50 51 52 53 54 55
token_do_end (264) 48
token_strings (265)
token_string (266) 101
token_fim (267) 10 11
token_else (268) 47
token_while_end (269) 50 51
token_matriz (270) 94
token_booleans (271)
token_boolean (272) 103
token_or (273) 126
token_then (274) 46 47
token_for (275) 52 53 54 55
token_for_end (276) 52 53 54 55
token_ints (277)
token_func (278) 25 27
token_func_fim (279) 14 15
token_proc (280) 26 28
token_proc_fim (281) 16 17
token_switch (282)
token_switch_end (283)
token_case (284)
token_default (285)
token_int (286) 99
token_inicio (287) 10 11
token_and (288) 118
token_if_end (289)
token_then_end (290) 46 47
token_else_end (291) 47
token_de (292) 52 53 54 55 94
token_ate (293) 49 52 53 54 55
token_repeat (294) 49
token_reals (295)
token_return (296) 87
token_real (297) 102
token_not (298) 149 150
token_while (299) 48 50 51
token_chars (300)
token_passo (301) 53 55
token_print (302) 73
token_read (303) 79 80
token_central (304) 81
token_minimo (305) 85
token_maximo (306) 86
token_aspas (307)
token_atrib (308) 69
token_maior (309) 160
token_maior_igual (310) 161
token_menor (311) 162
token_menor_igual (312) 163
token_igual (313) 164
token_diferente (314) 165
token_mais (315) 122
token_menos (316) 58 84 124 146 148
token_div (317) 114
token_mult (318) 112
token_pot (319) 109
token_mod (320) 116
token_increment (321) 157
token_decrement (322) 159
token_colchete_abre (323) 96 97 141 142
token_colchete_fecha (324) 96 97 141 142
token_abreParen (325) 32 33 73 79 80 81 85 86 90 91 130 134
token_fechaParen (326) 32 33 73 79 80 81 85 86 90 91 130 134
token_pt (327)
token_virg (328) 21 34 70 75 81 85 86
token_pt_virg (329) 1 2 18 19 25 26 27 28 43
token_dois_pt (330) 18 19 25 27 34 35
token_hashtag (331)
token_chaves_abre (332)
token_chaves_fecha (333)
token_apost (334)
token_cbarra (335)
token_vlr_inteiro (336) 57 58 96 97 141 142 145 146
token_vlr_real (337) 83 84 147 148
token_vlr_char (338) 143
token_true (339) 151 153
token_false (340) 152 154
token_ident (341) 1 2 21 22 25 26 27 28 34 35 80 88 136 137
token_vlr_string (342) 144


Não terminais com as regras onde eles aparecem

$accept (88)
    à esquerda: 0
PROG (89)
    à esquerda: 1 2, à direita: 0
INSERE_INIT (90)
    à esquerda: 3, à direita: 1 2
BLOCO (91)
    à esquerda: 5 6 7 9, à direita: 1
$@1 (92)
    à esquerda: 4, à direita: 5
$@2 (93)
    à esquerda: 8, à direita: 9
BLOCO_MAIN (94)
    à esquerda: 10 11, à direita: 5 6 7 9 23 24
DECL_VAR (95)
    à esquerda: 12 13, à direita: 5 7 23
MAIS_FUNCOES (96)
    à esquerda: 14 15 16 17, à direita: 5 9 14 16
LISTA_VAR (97)
    à esquerda: 18 19, à direita: 12 18
COD1 (98)
    à esquerda: 20, à direita: 18 19
REC_IDENT (99)
    à esquerda: 21 22, à direita: 18 19 21
BLOCO_FUNC (100)
    à esquerda: 23 24, à direita: 25 26
DECL_FUNC (101)
    à esquerda: 25 26 27 28, à direita: 14 15 16 17
STRCPY_FUNC (102)
    à esquerda: 29, à direita: 25 26 27 28
INSERE_FUNC_TAB (103)
    à esquerda: 30, à direita: 25 27
INSERE_PROC_TAB (104)
    à esquerda: 31, à direita: 26 28
PARAMETROS (105)
    à esquerda: 32 33, à direita: 25 26 27 28
LISTA_PARAM (106)
    à esquerda: 34 35, à direita: 32 34
INSERE_VAR_LISTAPARAM (107)
    à esquerda: 36, à direita: 34 35
INSERE_LISTAPARAM_HASH (108)
    à esquerda: 37, à direita: 34 35
LISTA_CMD (109)
    à esquerda: 38 39, à direita: 10 38 46 47 48 49 50 52 53
CMD (110)
    à esquerda: 40 41 42 43 44 45, à direita: 38 39
CMD_IF (111)
    à esquerda: 46 47, à direita: 45
CMD_DO_WHILE (112)
    à esquerda: 48, à direita: 41
CMD_REPEAT (113)
    à esquerda: 49, à direita: 44
CMD_WHILE (114)
    à esquerda: 50 51, à direita: 40
CMD_FOR (115)
    à esquerda: 52 53 54 55, à direita: 42
IDENT_OU_INT (116)
    à esquerda: 56 57 58, à direita: 52 53 54 55 82
CMD_SIMPLES (117)
    à esquerda: 59 60 61 62 63 64 65 66 67, à direita: 43
ATRIB (118)
    à esquerda: 69, à direita: 59
$@3 (119)
    à esquerda: 68, à direita: 69
IDENTS (120)
    à esquerda: 70 71, à direita: 69 70
CMD_IMPRIMA (121)
    à esquerda: 73, à direita: 61
$@4 (122)
    à esquerda: 72, à direita: 73
ARG (123)
    à esquerda: 75 77, à direita: 73 75 90
$@5 (124)
    à esquerda: 74, à direita: 75
$@6 (125)
    à esquerda: 76, à direita: 77
VERIFICA_VAR_DECLARADA (126)
    à esquerda: 78, à direita: 75 77
CMD_LEIA (127)
    à esquerda: 79 80, à direita: 62
CMD_CENTRAL (128)
    à esquerda: 81, à direita: 65
IDENT_OU_NUM (129)
    à esquerda: 82 83 84, à direita: 81 85 86
CMD_MINIMO (130)
    à esquerda: 85, à direita: 63
CMD_MAXIMO (131)
    à esquerda: 86, à direita: 64
RETURN (132)
    à esquerda: 87, à direita: 66
STRCPY_IDENT (133)
    à esquerda: 88, à direita: 90 91
CHAMADA_FUNCAO (134)
    à esquerda: 90 91, à direita: 60 131
$@7 (135)
    à esquerda: 89, à direita: 90
TIPO (136)
    à esquerda: 92 93, à direita: 18 19 25 27 34 35
MATRIZ (137)
    à esquerda: 94, à direita: 93
T_MAT (138)
    à esquerda: 96 97, à direita: 94
$@8 (139)
    à esquerda: 95, à direita: 96
SALVAR_M (140)
    à esquerda: 98, à direita: 96 97 141 142
TIPO_PRIM (141)
    à esquerda: 99 100 101 102 103, à direita: 92 94
VALOR (142)
    à esquerda: 104 105, à direita: 69 75 77
EXPRESSAO (143)
    à esquerda: 106 107, à direita: 46 47 48 49 50 51 87 104 130
    134
RESETA_PILHAS (144)
    à esquerda: 108, à direita: 106 107
EXPRESSAO_ARIT (145)
    à esquerda: 109 110, à direita: 106 107 109
EXPR (146)
    à esquerda: 112 114 116 118 119, à direita: 109 110 112 114 116
    118
$@9 (147)
    à esquerda: 111, à direita: 112
$@10 (148)
    à esquerda: 113, à direita: 114
$@11 (149)
    à esquerda: 115, à direita: 116
$@12 (150)
    à esquerda: 117, à direita: 118
VERIFICACAO_OP (151)
    à esquerda: 120, à direita: 112 114 116 118 122 124 126
FATOR (152)
    à esquerda: 122 124 126 127, à direita: 112 114 116 118 119 122
    124 126
$@13 (153)
    à esquerda: 121, à direita: 122
$@14 (154)
    à esquerda: 123, à direita: 124
$@15 (155)
    à esquerda: 125, à direita: 126
TERMO (156)
    à esquerda: 128 129 130 131 132 133 134, à direita: 122 124 126
    127
VERIFICACAO_TERMOS (157)
    à esquerda: 135, à direita: 127
TK_IDENT (158)
    à esquerda: 136 137, à direita: 52 53 54 55 56 70 71 132 155
    157 159
VERIFICA_LIM_MAT (159)
    à esquerda: 138, à direita: 137
PILHA_IDENT (160)
    à esquerda: 139, à direita: 136 137
TAM_MATRIZ (161)
    à esquerda: 141 142, à direita: 137
$@16 (162)
    à esquerda: 140, à direita: 141
TK_VLR_LITERAL (163)
    à esquerda: 143 144, à direita: 105
TK_VLR_NUM (164)
    à esquerda: 145 146 147 148, à direita: 129
MULTIPLOS_NOT (165)
    à esquerda: 149 150, à direita: 134 149 151 152 155
TK_VLR_BOOL (166)
    à esquerda: 151 152 153 154 155, à direita: 133
OP_INCR (167)
    à esquerda: 157 159, à direita: 67 128
$@17 (168)
    à esquerda: 156, à direita: 157
$@18 (169)
    à esquerda: 158, à direita: 159
OP_COMPARATIVO (170)
    à esquerda: 160 161 162 163 164 165, à direita: 106


Estado 0

    0 $accept: . PROG $end

    token_algoritmo  deslocar, e ir ao estado 1

    PROG  ir ao estado 2


Estado 1

    1 PROG: token_algoritmo . token_ident INSERE_INIT token_pt_virg BLOCO
    2     | token_algoritmo . token_ident INSERE_INIT token_pt_virg

    token_ident  deslocar, e ir ao estado 3


Estado 2

    0 $accept: PROG . $end

    $end  deslocar, e ir ao estado 4


Estado 3

    1 PROG: token_algoritmo token_ident . INSERE_INIT token_pt_virg BLOCO
    2     | token_algoritmo token_ident . INSERE_INIT token_pt_virg

    $padrão  reduzir usando a regra 3 (INSERE_INIT)

    INSERE_INIT  ir ao estado 5


Estado 4

    0 $accept: PROG $end .

    $padrão  aceitar


Estado 5

    1 PROG: token_algoritmo token_ident INSERE_INIT . token_pt_virg BLOCO
    2     | token_algoritmo token_ident INSERE_INIT . token_pt_virg

    token_pt_virg  deslocar, e ir ao estado 6


Estado 6

    1 PROG: token_algoritmo token_ident INSERE_INIT token_pt_virg . BLOCO
    2     | token_algoritmo token_ident INSERE_INIT token_pt_virg .

    token_var     deslocar, e ir ao estado 7
    token_func    deslocar, e ir ao estado 8
    token_proc    deslocar, e ir ao estado 9
    token_inicio  deslocar, e ir ao estado 10

    $padrão  reduzir usando a regra 2 (PROG)

    BLOCO         ir ao estado 11
    BLOCO_MAIN    ir ao estado 12
    DECL_VAR      ir ao estado 13
    MAIS_FUNCOES  ir ao estado 14
    DECL_FUNC     ir ao estado 15


Estado 7

   12 DECL_VAR: token_var . LISTA_VAR token_var_fim
   13         | token_var . token_var_fim

    token_var_fim  deslocar, e ir ao estado 16
    token_ident    deslocar, e ir ao estado 17

    LISTA_VAR  ir ao estado 18
    REC_IDENT  ir ao estado 19


Estado 8

   25 DECL_FUNC: token_func . token_ident STRCPY_FUNC PARAMETROS token_dois_pt TIPO INSERE_FUNC_TAB token_pt_virg BLOCO_FUNC
   27          | token_func . token_ident STRCPY_FUNC PARAMETROS token_dois_pt TIPO INSERE_FUNC_TAB token_pt_virg

    token_ident  deslocar, e ir ao estado 20


Estado 9

   26 DECL_FUNC: token_proc . token_ident STRCPY_FUNC PARAMETROS INSERE_PROC_TAB token_pt_virg BLOCO_FUNC
   28          | token_proc . token_ident STRCPY_FUNC PARAMETROS INSERE_PROC_TAB token_pt_virg

    token_ident  deslocar, e ir ao estado 21


Estado 10

   10 BLOCO_MAIN: token_inicio . LISTA_CMD token_fim
   11           | token_inicio . token_fim

    token_if       deslocar, e ir ao estado 22
    token_do       deslocar, e ir ao estado 23
    token_fim      deslocar, e ir ao estado 24
    token_for      deslocar, e ir ao estado 25
    token_repeat   deslocar, e ir ao estado 26
    token_return   deslocar, e ir ao estado 27
    token_while    deslocar, e ir ao estado 28
    token_print    deslocar, e ir ao estado 29
    token_read     deslocar, e ir ao estado 30
    token_central  deslocar, e ir ao estado 31
    token_minimo   deslocar, e ir ao estado 32
    token_maximo   deslocar, e ir ao estado 33
    token_ident    deslocar, e ir ao estado 34

    LISTA_CMD       ir ao estado 35
    CMD             ir ao estado 36
    CMD_IF          ir ao estado 37
    CMD_DO_WHILE    ir ao estado 38
    CMD_REPEAT      ir ao estado 39
    CMD_WHILE       ir ao estado 40
    CMD_FOR         ir ao estado 41
    CMD_SIMPLES     ir ao estado 42
    ATRIB           ir ao estado 43
    IDENTS          ir ao estado 44
    CMD_IMPRIMA     ir ao estado 45
    CMD_LEIA        ir ao estado 46
    CMD_CENTRAL     ir ao estado 47
    CMD_MINIMO      ir ao estado 48
    CMD_MAXIMO      ir ao estado 49
    RETURN          ir ao estado 50
    STRCPY_IDENT    ir ao estado 51
    CHAMADA_FUNCAO  ir ao estado 52
    TK_IDENT        ir ao estado 53
    OP_INCR         ir ao estado 54


Estado 11

    1 PROG: token_algoritmo token_ident INSERE_INIT token_pt_virg BLOCO .

    $padrão  reduzir usando a regra 1 (PROG)


Estado 12

    6 BLOCO: BLOCO_MAIN .

    $padrão  reduzir usando a regra 6 (BLOCO)


Estado 13

    5 BLOCO: DECL_VAR . MAIS_FUNCOES $@1 BLOCO_MAIN
    7      | DECL_VAR . BLOCO_MAIN

    token_func    deslocar, e ir ao estado 8
    token_proc    deslocar, e ir ao estado 9
    token_inicio  deslocar, e ir ao estado 10

    BLOCO_MAIN    ir ao estado 55
    MAIS_FUNCOES  ir ao estado 56
    DECL_FUNC     ir ao estado 15


Estado 14

    9 BLOCO: MAIS_FUNCOES . $@2 BLOCO_MAIN
   14 MAIS_FUNCOES: MAIS_FUNCOES . DECL_FUNC token_func_fim
   16             | MAIS_FUNCOES . DECL_FUNC token_proc_fim

    token_func  deslocar, e ir ao estado 8
    token_proc  deslocar, e ir ao estado 9

    $padrão  reduzir usando a regra 8 ($@2)

    $@2        ir ao estado 57
    DECL_FUNC  ir ao estado 58


Estado 15

   15 MAIS_FUNCOES: DECL_FUNC . token_func_fim
   17             | DECL_FUNC . token_proc_fim

    token_func_fim  deslocar, e ir ao estado 59
    token_proc_fim  deslocar, e ir ao estado 60


Estado 16

   13 DECL_VAR: token_var token_var_fim .

    $padrão  reduzir usando a regra 13 (DECL_VAR)


Estado 17

   22 REC_IDENT: token_ident .

    $padrão  reduzir usando a regra 22 (REC_IDENT)


Estado 18

   12 DECL_VAR: token_var LISTA_VAR . token_var_fim
   18 LISTA_VAR: LISTA_VAR . REC_IDENT token_dois_pt TIPO COD1 token_pt_virg

    token_var_fim  deslocar, e ir ao estado 61
    token_ident    deslocar, e ir ao estado 17

    REC_IDENT  ir ao estado 62


Estado 19

   19 LISTA_VAR: REC_IDENT . token_dois_pt TIPO COD1 token_pt_virg
   21 REC_IDENT: REC_IDENT . token_virg token_ident

    token_virg     deslocar, e ir ao estado 63
    token_dois_pt  deslocar, e ir ao estado 64


Estado 20

   25 DECL_FUNC: token_func token_ident . STRCPY_FUNC PARAMETROS token_dois_pt TIPO INSERE_FUNC_TAB token_pt_virg BLOCO_FUNC
   27          | token_func token_ident . STRCPY_FUNC PARAMETROS token_dois_pt TIPO INSERE_FUNC_TAB token_pt_virg

    $padrão  reduzir usando a regra 29 (STRCPY_FUNC)

    STRCPY_FUNC  ir ao estado 65


Estado 21

   26 DECL_FUNC: token_proc token_ident . STRCPY_FUNC PARAMETROS INSERE_PROC_TAB token_pt_virg BLOCO_FUNC
   28          | token_proc token_ident . STRCPY_FUNC PARAMETROS INSERE_PROC_TAB token_pt_virg

    $padrão  reduzir usando a regra 29 (STRCPY_FUNC)

    STRCPY_FUNC  ir ao estado 66


Estado 22

   46 CMD_IF: token_if . EXPRESSAO token_then LISTA_CMD token_then_end
   47       | token_if . EXPRESSAO token_then LISTA_CMD token_then_end token_else LISTA_CMD token_else_end

    $padrão  reduzir usando a regra 108 (RESETA_PILHAS)

    EXPRESSAO      ir ao estado 67
    RESETA_PILHAS  ir ao estado 68


Estado 23

   48 CMD_DO_WHILE: token_do . LISTA_CMD token_do_end token_while EXPRESSAO

    token_if       deslocar, e ir ao estado 22
    token_do       deslocar, e ir ao estado 23
    token_for      deslocar, e ir ao estado 25
    token_repeat   deslocar, e ir ao estado 26
    token_return   deslocar, e ir ao estado 27
    token_while    deslocar, e ir ao estado 28
    token_print    deslocar, e ir ao estado 29
    token_read     deslocar, e ir ao estado 30
    token_central  deslocar, e ir ao estado 31
    token_minimo   deslocar, e ir ao estado 32
    token_maximo   deslocar, e ir ao estado 33
    token_ident    deslocar, e ir ao estado 34

    LISTA_CMD       ir ao estado 69
    CMD             ir ao estado 36
    CMD_IF          ir ao estado 37
    CMD_DO_WHILE    ir ao estado 38
    CMD_REPEAT      ir ao estado 39
    CMD_WHILE       ir ao estado 40
    CMD_FOR         ir ao estado 41
    CMD_SIMPLES     ir ao estado 42
    ATRIB           ir ao estado 43
    IDENTS          ir ao estado 44
    CMD_IMPRIMA     ir ao estado 45
    CMD_LEIA        ir ao estado 46
    CMD_CENTRAL     ir ao estado 47
    CMD_MINIMO      ir ao estado 48
    CMD_MAXIMO      ir ao estado 49
    RETURN          ir ao estado 50
    STRCPY_IDENT    ir ao estado 51
    CHAMADA_FUNCAO  ir ao estado 52
    TK_IDENT        ir ao estado 53
    OP_INCR         ir ao estado 54


Estado 24

   11 BLOCO_MAIN: token_inicio token_fim .

    $padrão  reduzir usando a regra 11 (BLOCO_MAIN)


Estado 25

   52 CMD_FOR: token_for . TK_IDENT token_de IDENT_OU_INT token_ate IDENT_OU_INT token_do LISTA_CMD token_for_end
   53        | token_for . TK_IDENT token_de IDENT_OU_INT token_ate IDENT_OU_INT token_passo IDENT_OU_INT token_do LISTA_CMD token_for_end
   54        | token_for . TK_IDENT token_de IDENT_OU_INT token_ate IDENT_OU_INT token_do token_for_end
   55        | token_for . TK_IDENT token_de IDENT_OU_INT token_ate IDENT_OU_INT token_passo IDENT_OU_INT token_do token_for_end

    token_ident  deslocar, e ir ao estado 70

    TK_IDENT  ir ao estado 71


Estado 26

   49 CMD_REPEAT: token_repeat . LISTA_CMD token_ate EXPRESSAO

    token_if       deslocar, e ir ao estado 22
    token_do       deslocar, e ir ao estado 23
    token_for      deslocar, e ir ao estado 25
    token_repeat   deslocar, e ir ao estado 26
    token_return   deslocar, e ir ao estado 27
    token_while    deslocar, e ir ao estado 28
    token_print    deslocar, e ir ao estado 29
    token_read     deslocar, e ir ao estado 30
    token_central  deslocar, e ir ao estado 31
    token_minimo   deslocar, e ir ao estado 32
    token_maximo   deslocar, e ir ao estado 33
    token_ident    deslocar, e ir ao estado 34

    LISTA_CMD       ir ao estado 72
    CMD             ir ao estado 36
    CMD_IF          ir ao estado 37
    CMD_DO_WHILE    ir ao estado 38
    CMD_REPEAT      ir ao estado 39
    CMD_WHILE       ir ao estado 40
    CMD_FOR         ir ao estado 41
    CMD_SIMPLES     ir ao estado 42
    ATRIB           ir ao estado 43
    IDENTS          ir ao estado 44
    CMD_IMPRIMA     ir ao estado 45
    CMD_LEIA        ir ao estado 46
    CMD_CENTRAL     ir ao estado 47
    CMD_MINIMO      ir ao estado 48
    CMD_MAXIMO      ir ao estado 49
    RETURN          ir ao estado 50
    STRCPY_IDENT    ir ao estado 51
    CHAMADA_FUNCAO  ir ao estado 52
    TK_IDENT        ir ao estado 53
    OP_INCR         ir ao estado 54


Estado 27

   87 RETURN: token_return . EXPRESSAO

    $padrão  reduzir usando a regra 108 (RESETA_PILHAS)

    EXPRESSAO      ir ao estado 73
    RESETA_PILHAS  ir ao estado 68


Estado 28

   50 CMD_WHILE: token_while . EXPRESSAO token_do LISTA_CMD token_while_end
   51          | token_while . EXPRESSAO token_do token_while_end

    $padrão  reduzir usando a regra 108 (RESETA_PILHAS)

    EXPRESSAO      ir ao estado 74
    RESETA_PILHAS  ir ao estado 68


Estado 29

   73 CMD_IMPRIMA: token_print . token_abreParen ARG $@4 token_fechaParen

    token_abreParen  deslocar, e ir ao estado 75


Estado 30

   79 CMD_LEIA: token_read . token_abreParen token_fechaParen
   80         | token_read . token_abreParen token_ident token_fechaParen

    token_abreParen  deslocar, e ir ao estado 76


Estado 31

   81 CMD_CENTRAL: token_central . token_abreParen IDENT_OU_NUM token_virg IDENT_OU_NUM token_virg IDENT_OU_NUM token_fechaParen

    token_abreParen  deslocar, e ir ao estado 77


Estado 32

   85 CMD_MINIMO: token_minimo . token_abreParen IDENT_OU_NUM token_virg IDENT_OU_NUM token_fechaParen

    token_abreParen  deslocar, e ir ao estado 78


Estado 33

   86 CMD_MAXIMO: token_maximo . token_abreParen IDENT_OU_NUM token_virg IDENT_OU_NUM token_fechaParen

    token_abreParen  deslocar, e ir ao estado 79


Estado 34

   88 STRCPY_IDENT: token_ident .
  136 TK_IDENT: token_ident . PILHA_IDENT
  137         | token_ident . PILHA_IDENT TAM_MATRIZ VERIFICA_LIM_MAT

    token_abreParen  reduzir usando a regra 88 (STRCPY_IDENT)
    $padrão         reduzir usando a regra 139 (PILHA_IDENT)

    PILHA_IDENT  ir ao estado 80


Estado 35

   10 BLOCO_MAIN: token_inicio LISTA_CMD . token_fim
   38 LISTA_CMD: LISTA_CMD . CMD

    token_if       deslocar, e ir ao estado 22
    token_do       deslocar, e ir ao estado 23
    token_fim      deslocar, e ir ao estado 81
    token_for      deslocar, e ir ao estado 25
    token_repeat   deslocar, e ir ao estado 26
    token_return   deslocar, e ir ao estado 27
    token_while    deslocar, e ir ao estado 28
    token_print    deslocar, e ir ao estado 29
    token_read     deslocar, e ir ao estado 30
    token_central  deslocar, e ir ao estado 31
    token_minimo   deslocar, e ir ao estado 32
    token_maximo   deslocar, e ir ao estado 33
    token_ident    deslocar, e ir ao estado 34
